<resources>
    <string name="app_name">AndroidAssignments</string>
    <string name="hello_message">Hello World!</string>
    <string name="button_text">I\'m a button</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="switch_text">What does this do?</string>
    <string name="RB_text">RadioButton</string>
    <string name="CB_text">CheckBox</string>
    <string name="cancel">cancel</string>
    <string name="dialog_title">Return to Main?</string>
    <string name="dialog_message">Select OK or CANCEL</string>
    <string name="ok">ok</string>
    <string name="response">Here is my response</string>
    <string name="on">On</string>
    <string name="off">Off</string>
    <string name="start_chat_button">Start Chat</string>
    <string name="send_button">Send</string>
    <string name="title_activity_test_toolbar">TestToolbar</string>
    <string name="test_toolbar">Test Toolbar</string>
    <string name="snack_mail">You pressed a button</string>
    <string name="option_1">You selected option 1</string>
    <string name="about">Version 1.0, by Derek Marshall</string>
    <string name="title_one">One</string>
    <string name="title_two">Two</string>
    <string name="title_three">Three</string>
    <string name="about_title">About</string>
    <string name="go_back">Do you want to go back?</string>
    <string name="default_toast">Default Value</string>
    <string name="replace_snack">Do you want to replace the snackbar message?</string>
    <string name="weather_button">Weather Button</string>
    <string name="minT">Minimum Temperature</string>
    <string name="maxT">Maximum Temperature</string>
    <string name="currT">Current Temperature</string>
    <string name="weather_string">Weather</string>
    <string name="delete">DELETE THIS MESSAGE</string>
    <string name="message_here">Message Here</string>
    <string name="id_here">ID=</string>
</resources>