<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:rowCount="2"
    android:columnCount="2"
    tools:context=".ListItemsActivity">

    <RadioButton
        android:id="@+id/radio_button"
        android:layout_columnWeight="1"
        android:layout_gravity="fill"
        android:text="@string/RB_text"
        />

    <CheckBox
        android:id="@+id/check_box"
        android:layout_columnWeight="1"
        android:layout_gravity="fill"
        android:text="@string/CB_text"
        />

    <Switch
        android:id="@+id/fun_switch"
        android:layout_columnWeight="1"
        android:layout_gravity="fill"
        android:text="@string/switch_text"
        />

    <ImageButton
        android:id="@+id/camera_button"
        android:layout_columnWeight="1"
        android:layout_gravity="fill"
        android:src="@android:drawable/ic_menu_camera" />


</GridLayout>